force-app/main/default/objects/VRT_Rental__c/fields/VRT_DIV_penalty__c.field-meta.xml
<CustomField>
    <fullName>VRT_DIV_penalty__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Penalizacion por retraso en devolucion del vehiculo</description>
    <label>Penalty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>