force-app/main/default/objects/VRT_Rental__c/fields/VRT_FLG_descuento__c.field-meta.xml
<CustomField>
    <fullName>VRT_FLG_descuento__c</fullName>
    <defaultValue>false</defaultValue>
    <description>indica si se aplica el descuento del 5%</description>
    <label>Descuento 5%</label>
    <type>Checkbox</type>
</CustomField>