force-app/main/default/objects/VRT_Rental__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>VRT_DIV_TotalCost__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>VRT_DAT_InitialDate__c</columns>
    <columns>VRT_DAT_FinalDate__c</columns>
    <columns>VRT_SEL_Status__c</columns>
    <columns>VRT_SEL_PaymentStatus__c</columns>
    <columns>VRT_LKP_Vehicle__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>